fix title bar issue after merging (also fix overflowing signup and welcome)

--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -39,12 +39,16 @@
 
 .app {
   position: relative;
+  .sportsbg();
 }
 
 .app-content {
-  padding-top:40px;
-  .sportsbg();
-  height:100%;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+
 }
 
 //TODO: further optimize perfect scrollbar css
