--- a/src/components/App/TitleBar/MacTitleBar/MacTitleBar.less
+++ b/src/components/App/TitleBar/MacTitleBar/MacTitleBar.less
@@ -5,7 +5,10 @@
   cursor: default;
   -webkit-app-region: drag;
   text-align: center;
-  position: relative;
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  top: 0px;
   background-color: @title-bar-solid-bg;
   .left {
     left: 14px;
