--- a/src/components/App/TitleBar/WindowsTitleBar/WindowsTitleBar.less
+++ b/src/components/App/TitleBar/WindowsTitleBar/WindowsTitleBar.less
@@ -5,7 +5,7 @@
   cursor: default;
   -webkit-app-region: drag;
   text-align: center;
-  position: relative;
+  position: fixed;
   background-color: @title-bar-solid-bg;
 
   .left {
